--- a/Avito/Base.lproj/Main.storyboard
+++ b/Avito/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +16,71 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="96" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="UhJ-rf-wa0">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="96" id="Ezf-4j-nAZ" customClass="UserCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ezf-4j-nAZ" id="Kbk-lV-SQi">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3DD-Sp-YJT">
+                                                    <rect key="frame" x="545" y="20" width="55" height="55"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="55" id="KWZ-iA-5JM"/>
+                                                        <constraint firstAttribute="height" constant="55" id="olu-OP-daB"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qau-Nn-GoT">
+                                                    <rect key="frame" x="15" y="29" width="510" height="37"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="sI3-7t-MRi"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="sI3-7t-MRi"/>
+                                                        </mask>
+                                                    </variation>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerY" secondItem="Qau-Nn-GoT" secondAttribute="centerY" priority="999" id="1Ih-hq-xer"/>
+                                                <constraint firstItem="3DD-Sp-YJT" firstAttribute="leading" secondItem="Qau-Nn-GoT" secondAttribute="trailing" constant="20" id="8vn-tF-x6q"/>
+                                                <constraint firstItem="Qau-Nn-GoT" firstAttribute="leading" secondItem="Kbk-lV-SQi" secondAttribute="leadingMargin" constant="7" id="IZ1-pE-AHT"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Qau-Nn-GoT" secondAttribute="bottom" constant="21" id="bNY-ff-IUA"/>
+                                                <constraint firstAttribute="centerY" secondItem="3DD-Sp-YJT" secondAttribute="centerY" id="s5G-p0-0gb"/>
+                                                <constraint firstAttribute="trailing" secondItem="3DD-Sp-YJT" secondAttribute="trailing" id="zJm-XA-j4o"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="3DD-Sp-YJT" id="NxZ-GI-I4d"/>
+                                            <outlet property="loginLabel" destination="Qau-Nn-GoT" id="mGM-Pg-ERI"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="iur-Nm-pmV"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="NG5-bk-m7a"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UhJ-rf-wa0" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="8Ho-E3-usF"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UhJ-rf-wa0" secondAttribute="bottom" id="Wpl-bk-K14"/>
+                            <constraint firstAttribute="trailing" secondItem="UhJ-rf-wa0" secondAttribute="trailing" id="efo-k3-B0Z"/>
+                            <constraint firstItem="UhJ-rf-wa0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="g2t-9X-79e"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="UhJ-rf-wa0" id="498-8e-VhL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
